--- a/app/ui/legacy/src/main/res/xml/account_settings.xml
+++ b/app/ui/legacy/src/main/res/xml/account_settings.xml
@@ -402,6 +402,13 @@
             android:summary="@string/account_settings_mute_mailing_lists_summary"
             android:title="@string/account_settings_mute_mailing_lists_label" />
 
+        <Preference
+            android:key="muted_senders"
+            android:singleLine="false"
+            android:summary="@string/account_settings_muted_senders_summary"
+            android:title="@string/account_settings_muted_senders_label"
+            android:fragment="com.fsck.k9.ui.settings.account.EmailAddressListFragment"/>
+
         <com.fsck.k9.ui.settings.account.NotificationsPreference
             android:key="open_notification_settings"
             android:summary="@string/account_settings_notification_open_system_notifications_summary"
