--- a/app/ui/legacy/src/main/res/xml/account_settings.xml
+++ b/app/ui/legacy/src/main/res/xml/account_settings.xml
@@ -396,6 +396,12 @@
             android:summary="@string/account_settings_notification_opens_unread_summary"
             android:title="@string/account_settings_notification_opens_unread_label" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="mute_mailing_lists"
+            android:summary="@string/account_settings_mute_mailing_lists_summary"
+            android:title="@string/account_settings_mute_mailing_lists_label" />
+
         <com.fsck.k9.ui.settings.account.NotificationsPreference
             android:key="open_notification_settings"
             android:summary="@string/account_settings_notification_open_system_notifications_summary"
