--- a/app/ui/legacy/src/main/res/xml/account_settings.xml
+++ b/app/ui/legacy/src/main/res/xml/account_settings.xml
@@ -409,6 +409,13 @@
             android:title="@string/account_settings_muted_senders_label"
             android:fragment="com.fsck.k9.ui.settings.account.EmailAddressListFragment"/>
 
+        <Preference
+            android:key="mute_if_sent_to"
+            android:singleLine="false"
+            android:summary="@string/account_settings_mute_if_sent_to_summary"
+            android:title="@string/account_settings_mute_if_sent_to_label"
+            android:fragment="com.fsck.k9.ui.settings.account.EmailAddressListFragment"/>
+
         <com.fsck.k9.ui.settings.account.NotificationsPreference
             android:key="open_notification_settings"
             android:summary="@string/account_settings_notification_open_system_notifications_summary"
